--- a/osu.Framework/osu.Framework.csproj
+++ b/osu.Framework/osu.Framework.csproj
@@ -3,6 +3,7 @@
     <TargetFrameworks>netcoreapp3.0;netstandard2.0</TargetFrameworks>
     <OutputType>Library</OutputType>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <PublishTrimmed>true</PublishTrimmed>
     <AssemblyTitle>osu!framework</AssemblyTitle>
     <AssemblyName>osu.Framework</AssemblyName>
     <Description>A 2D application/game framework written with rhythm games in mind.</Description>
@@ -23,8 +24,8 @@
     <AdditionalFiles Include="..\BannedSymbols.txt" />
   </ItemGroup>
   <ItemGroup Label="Package References">
+    <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
     <PackageReference Include="Markdig" Version="0.18.0" />
-    <PackageReference Include="FFmpeg.AutoGen" Version="4.2.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.BannedApiAnalyzers" Version="2.9.7" PrivateAssets="All" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-19367-01" PrivateAssets="All" />
     <PackageReference Include="SharpFNT" Version="1.1.0" />
@@ -34,17 +35,9 @@
     <PackageReference Include="Microsoft.Diagnostics.Runtime" Version="1.1.46104" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
-    <PackageReference Include="ManagedBass" Version="2.0.4" />
-    <PackageReference Include="ManagedBass.Fx" Version="2.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.6.0" />
     <PackageReference Include="System.Reflection.Emit.ILGeneration" Version="4.6.0" />
-    <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
     <PackageReference Include="ppy.osuTK.NS20" Version="1.0.111" />
-  </ItemGroup>
-  <ItemGroup Condition="$(TargetFrameworkIdentifier) == '.NETCoreApp'">
-    <!-- DO NOT use ProjectReference for native packaging project.
-         See https://github.com/NuGet/Home/issues/4514 and https://github.com/dotnet/sdk/issues/765 . -->
-    <PackageReference Include="ppy.osu.Framework.NativeLibs" Version="2019.1010.0" />
   </ItemGroup>
 </Project>
